--- a/volunteer-app/src/app/login/login.component.html
+++ b/volunteer-app/src/app/login/login.component.html
@@ -1,2 +1,7 @@
-<p>login works!</p>
-<h4>{{ user.first_name }} {{ user.last_name }}</h4>
+<p>login goes here </p>
+<p>** The following component is to be used as an example **  </p>
+<h3>Update this volunteer's first name</h3>
+<h4>{{ user.first_name }} {{ user.last_name }} 
+  <input id="a"/> <button 
+  (click)="updateJohn()"> Update Volunteer</button></h4>
+
