volunteer signup working

--- a/volunteer-app/src/app/create-volunteer/create-volunteer.component.html
+++ b/volunteer-app/src/app/create-volunteer/create-volunteer.component.html
@@ -81,5 +81,5 @@
     </div>
 
 
-    <button class="btn btn-primary">Submit</button>
+    <button (click)="createVolunteerAccount()"> Sign up as Volunteer! </button> 
 </form>
