basic frontend page and navigation for event-reg

--- a/volunteer-app/src/app/app.component.html
+++ b/volunteer-app/src/app/app.component.html
@@ -1,1 +1,9 @@
 <app-login></app-login>
+
+
+
+<!-- <app-event-registration></app-event-registration> -->
+<router-outlet></router-outlet>
+<nav>
+    <a routerLink="/event-registration">Volunteer Event Registration Page</a>
+</nav>
