--- a/volunteer-app/src/app/event-registration/event-registration.component.html
+++ b/volunteer-app/src/app/event-registration/event-registration.component.html
@@ -1,1 +1,8 @@
-<p>event-registration works!</p>
+<h3>Register to Volunteer at an Event</h3>
+<h4>Volunteer ID <input id="volunteer-id"/> </h4>
+<h4>Event ID <input id="event-id"/> </h4>
+<h4><button (click)="register()"> Register </button></h4>
+
+<nav>
+    <a routerLink="">Return to homepage</a>
+</nav>
