Created gerkhin steps.

--- a/volunteer-app/src/app/create-event/create-event.component.html
+++ b/volunteer-app/src/app/create-event/create-event.component.html
@@ -51,6 +51,9 @@
             <button class="btn btn-primary">Create Event</button>
           </div>
         </form>
+        <div>
+          <ul><li *ngFor="let item of items; index as i; trackBy: trackByFn">...</li></ul>
+        </div>
       </div>
     </div>
   </div>
