--- a/volunteer-app/src/app/create-volunteer/create-volunteer.component.html
+++ b/volunteer-app/src/app/create-volunteer/create-volunteer.component.html
@@ -1,95 +1,43 @@
-<form>
-    <div class="form-group">
-        <label for="firstName">First Name</label>
-        <input 
-            required
-            ngModel
-            name="firstName"
-            #firstName="ngModel"
-            id="firstName" type="text" class="form-control">
-        <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid">
-            <div *ngIf="firstName.errors.required">First name is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="lastName">Last Name</label>
-        <input 
-            required
-            ngModel
-            name="lastName"
-            #lastName="ngModel"
-            id="lastName" type="text" class="form-control">
-        <div class="alert alert-danger" *ngIf="lastName.touched && !lastName.valid">
-            <div *ngIf="lastName.errors.required">Last name is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="emailAddress">Email Address</label>
-        <input 
-            required
-            ngModel
-            name="emailAddress"
-            #emailAddress="ngModel"
-            id="emailAddress" type="email" class="form-control">
-        <div class="alert alert-danger" *ngIf="emailAddress.touched && !emailAddress.valid">
-            <div *ngIf="emailAddress.errors.required">Email address is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input 
-            required
-            ngModel
-            name="password"
-            #password="ngModel"
-            id="password" type="password" class="form-control">
-        <div class="alert alert-danger" *ngIf="password.touched && !password.valid">
-            <div *ngIf="password.errors.required">Password is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="phoneNumber">Phone Number</label>
-        <input 
-            ngModel
-            name="phoneNumber"
-            #phoneNumber="ngModel"
-            id="phoneNumber" type="text" class="form-control">
-    </div>
-    <div class="form-group">
-        <label for="dob">Date of Birth</label>
-        <input 
-            ngModel
-            name="dob"
-            #phoneNumber="ngModel"
-            id="dob" type="date" class="form-control">
-    </div>
-    <div class="form-group">
-        <label for="major">Major</label>
-        <input 
-            ngModel
-            name="major"
-            #phoneNumber="ngModel"
-            id="major" type="text" class="form-control">
-    </div>
-    <div class="form-group">
-        <label for="year">Year</label>
-        <!-- <input 
-            ngModel
-            name="year"
-            #phoneNumber="ngModel"
-            id="year" type="text" class="form-control"> -->
-
-            <select ngModel name="year" #phoneNumber="ngModel" id="year" class="form-control">
+<form [formGroup]="form" (ngSubmit)="createVolunteerAccount()">
+        <p>
+            <label>First Name:</label>
+            <input id="firstName" name="firstName" type="text" formControlName="firstName">
+        </p>
+        <p>
+            <label>Last Name:</label>
+            <input id="lastName" name="lastName" type="text" formControlName="lastName">
+        </p>
+        <p>
+            <label>Email Address:</label>
+            <input id="emailAddress" name="emailAddress" type="text" formControlName="emailAddress">
+        </p>
+        <p>
+            <label>Password:</label>
+            <input id="password" name="password" type="password" formControlName="password">
+        </p>
+        <p>
+            <label>Phone Number:</label>
+            <input id="phoneNumber" name="phoneNumber" type="tel" formControlName="phoneNumber">
+        </p>
+        <p>
+            <label>dob:</label>
+            <input id="phoneNumber" name="dob" type="date" formControlName="dob">
+        </p>
+        <p>
+            <label>Major:</label>
+            <input id="major" name="major" type="text" formControlName="major">
+        </p>
+        <p>
+            <label>Year:</label>
+            <select id="year" name="year" formControlName="year">
                 <option value="U0">U0</option>
                 <option value="U1">U1</option>
                 <option value="U2">U2</option>
                 <option value="U3">U3</option>
                 <option value="U4">U4</option>
-              </select>
-    </div>
-
-
-    <button (click)="createVolunteerAccount()"> Sign up as Volunteer! </button> 
-
-    <p><span id='display'></span></p>
-</form>
+            </select>
+        </p>
+        <p>
+            <button id="submit" type="submit" [disabled]="!form.valid">Submit</button>
+        </p>
+    </form>
