--- a/volunteer-app/src/app/create-volunteer/create-volunteer.component.css
+++ b/volunteer-app/src/app/create-volunteer/create-volunteer.component.css
@@ -1,10 +1,10 @@
 body { padding: 20px; }
 
-.ng-valid:not(form):not(.ng-pristine),
+.ng-valid:not(form):not(.ng-untouched),
 .ng-valid.required {
   background-color: lightgreen;
 }
 
-.ng-invalid:not(form) {
+.ng-invalid:not(form):not(.ng-untouched) {
   background-color: lightcoral;
 }
