Added new create event scenario.

--- a/volunteer-app/src/app/create-event/create-event.component.html
+++ b/volunteer-app/src/app/create-event/create-event.component.html
@@ -50,8 +50,8 @@
           <div class="form-group">
             <button class="btn btn-primary">Create Event</button>
           </div>
-        </form>
-        <div id="Check" *ngIf="createdEvent" > The event has been created </div>     
+          <div id="check" *ngIf="true" >The event has been created</div>
+        </form>    
       </div>
     </div>
   </div>
