finished gherkin tests

--- a/volunteer-app/src/app/create-event/create-event.component.html
+++ b/volunteer-app/src/app/create-event/create-event.component.html
@@ -50,7 +50,7 @@
           <div class="form-group">
             <button class="btn btn-primary">Create Event</button>
           </div>
-          <div id="check" *ngIf="true" >The event has been created</div>
+          <h4 id="check" *ngIf=true >The event has been created</h4>
         </form>    
       </div>
     </div>
