--- a/volunteer-app/src/app/create-organizer/create-organizer.component.html
+++ b/volunteer-app/src/app/create-organizer/create-organizer.component.html
@@ -1,1 +1,28 @@
-<p>create-organizer works!</p>
+<form [formGroup]="form" (ngSubmit)="createOrganizerAccount()">
+    <p>
+        <label>First Name:</label>
+        <input id="firstName" name="firstName" type="text" formControlName="firstName">
+    </p>
+    <p>
+        <label>Last Name:</label>
+        <input id="lastName" name="lastName" type="text" formControlName="lastName">
+    </p>
+    <p>
+        <label>Email Address:</label>
+        <input id="emailAddress" name="emailAddress" type="text" formControlName="emailAddress">
+    </p>
+    <p>
+        <label>Password:</label>
+        <input id="password" name="password" type="password" formControlName="password">
+    </p>
+    <p>
+        <label>Phone Number:</label>
+        <input id="phoneNumber" name="phoneNumber" type="tel" formControlName="phoneNumber">
+    </p>
+    <p>
+        <button class="btn signup-organizer-btn" id="submit" type="submit" [disabled]="!form.valid">Submit</button>
+    </p>
+
+    <p><span id='display'></span></p>
+
+</form>
