--- a/volunteer-app/src/app/login/login.component.html
+++ b/volunteer-app/src/app/login/login.component.html
@@ -4,7 +4,7 @@
 
   <div class="form-group">
     <label for="email">Email Address</label>
-    <input type="text" class='form-control' formControlName="email" id="email"
+    <input type="text" class='form-control' formControlName="email" id="emailLogin"
       [ngClass]="{'is-invalid': submitted && f.email.errors}" />
     <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
       <div *ngIf="f.email.errors.required" style="color:rgb(255, 109, 109)">>> Email required </div>
@@ -16,7 +16,7 @@
 
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" class='form-control' formControlName="password" id="password"
+    <input type="password" class='form-control' formControlName="password" id="passwordLogin"
       [ngClass]="{'is-invalid': submitted && f.password.errors}" />
     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
       <div *ngIf="f.password.errors.required" style="color:rgb(255, 109, 109)">>> Password required </div>
@@ -25,7 +25,7 @@
 
   <p><button class="loginbtn" id="loginbtn">Login</button></p>
 
-  <p><span id='display'></span></p>
+  <p><span id='displayLogin'></span></p>
 </form>
 
 <p>** The following component is to be used as an example ** </p>
