--- a/volunteer-app/src/app/app.component.html
+++ b/volunteer-app/src/app/app.component.html
@@ -1,14 +1,17 @@
+<!--
 <app-login></app-login>
-
-
 <app-create-volunteer></app-create-volunteer>
-
-
 <app-create-event></app-create-event>
+-->
 
-<!-- <app-event-registration></app-event-registration> -->
+
+
 <br>
+
+<nav><a routerLink="/login">Login</a></nav>
+<nav><a routerLink="/signup-volunteer">Create New Account (Volunteer)</a></nav>
+<nav><a routerLink="/signup-organiser">Create New Account (Organiser)</a></nav>
+<nav><a routerLink="/create-event">Create New Event</a></nav>
+<nav><a routerLink="/event-registration">Register to Volunteer for an Event</a></nav>
+
 <router-outlet></router-outlet>
-<nav>
-    <a routerLink="/event-registration">Volunteer Event Registration Page</a>
-</nav>
