completed backend and rough frontend for add tasks to event

--- a/volunteer-app/src/app/app.component.html
+++ b/volunteer-app/src/app/app.component.html
@@ -3,6 +3,7 @@
 
 <app-create-volunteer></app-create-volunteer>
 
+<app-add-event-tasks></app-add-event-tasks>
 
 <app-create-event></app-create-event>
 
