--- a/volunteer-app/src/app/app.component.html
+++ b/volunteer-app/src/app/app.component.html
@@ -13,5 +13,6 @@
 <nav><a routerLink="/signup-organiser">Create New Account (Organiser)</a></nav>
 <nav><a routerLink="/create-event">Create New Event</a></nav>
 <nav><a routerLink="/event-registration">Register to Volunteer for an Event</a></nav>
+<nav><a routerLink="/volunteer-unregister-event">Unregister Volunteer from event</a></nav>
 
 <router-outlet></router-outlet>
