--- a/volunteer-app/src/app/event-registration/event-registration.component.html
+++ b/volunteer-app/src/app/event-registration/event-registration.component.html
@@ -12,7 +12,7 @@
         <select id='event-id' formControlName="event" style="padding:3px; margin:5px; min-width:10%">
             <option [ngValue]="null" disabled>Select Event</option>
             <option *ngFor="let event of events" [ngValue]="event.id"> {{ event.name }} (ID={{ event.id }})</option>
-            <option id="test-event" value="null"> Test Event</option>
+            <!-- <option id="test-event" value="null"> Test Event</option> -->
         </select>
         <div id="required-event-id" *ngIf="submitted && !registerForm.controls.event?.valid" style="font-size:smaller;color:red">*required</div>
     </div>
