--- a/volunteer-app/src/app/volunteer-unregister-event/volunteer-unregister-event.component.html
+++ b/volunteer-app/src/app/volunteer-unregister-event/volunteer-unregister-event.component.html
@@ -1,10 +1,10 @@
-<h3>Register to Volunteer at an Event</h3>
+<h3>Unregister to Volunteer at an Event</h3>
 
 <form [formGroup]="unregisterForm" (ngSubmit)="submit()">
   <div>
       <select id='event-id' formControlName="event" style="padding:3px; margin:5px; min-width:10%">
           <option [ngValue]="null" disabled>Select Event</option>
-          <option *ngFor="let event of events" [ngValue]="event.id"> {{ event.name }} (ID={{ event.id }})</option>
+          <option *ngFor="let event of vEventsFor" [ngValue]="event.id"> {{ event.name }} (ID={{ event.id }})</option>
       </select>
       <div id="required-event-id" *ngIf="submitted && !unregisterForm.controls.event?.valid" style="font-size:smaller;color:red">*required</div>
   </div>
