--- a/volunteer-app/src/app/event-registration/event-registration.component.html
+++ b/volunteer-app/src/app/event-registration/event-registration.component.html
@@ -4,14 +4,14 @@
     <div>
         <select id='volunteer-id' formControlName="volunteer" style="padding:3px; margin:5px; min-width:10%">
             <option [ngValue]="null" disabled>Select Volunteer</option>
-            <option *ngFor="let volunteer of volunteers" [ngValue]="volunteer.id" [id]="volunteer.id"> {{ volunteer.name }} (ID={{ volunteer.id }})</option>
+            <option *ngFor="let volunteer of volunteers" [ngValue]="volunteer.id" [id]="volunteer.id"> {{ volunteer.name }} </option>
         </select>
         <div id="required-volunter-id" *ngIf="submitted && !registerForm.controls.volunteer?.valid" style="font-size:smaller;color:red">*required</div>
     </div>
     <div>
         <select id='event-id' formControlName="event" style="padding:3px; margin:5px; min-width:10%">
             <option [ngValue]="null" disabled>Select Event</option>
-            <option *ngFor="let event of events" [ngValue]="event.id"> {{ event.name }} (ID={{ event.id }})</option>
+            <option *ngFor="let event of events" [ngValue]="event.id"> {{ event.name }} </option>
             <option id="test-event" value="null"> Test Event</option>
         </select>
         <div id="required-event-id" *ngIf="submitted && !registerForm.controls.event?.valid" style="font-size:smaller;color:red">*required</div>
