--- a/volunteer-app/src/app/login/login.component.html
+++ b/volunteer-app/src/app/login/login.component.html
@@ -23,7 +23,8 @@
     </div>
   </div>
 
-  <p><button class="loginbtn" id="loginbtn">Login</button></p>
+<button class="loginbtn nav-item" id="loginbtn">Login</button> 
+
 
   <p><span id='displayLogin'></span></p>
 </form>
