--- a/volunteer-app/src/app/app.component.html
+++ b/volunteer-app/src/app/app.component.html
@@ -1,12 +1,12 @@
 
-<app-login></app-login>
+<!-- <app-login></app-login>
 <app-create-volunteer></app-create-volunteer>
 <app-create-event></app-create-event>
 
 <app-assign-task></app-assign-task>
 
 
-<app-add-event-tasks></app-add-event-tasks>
+<app-add-event-tasks></app-add-event-tasks> -->
 
 
 
