update user info

--- a/volunteer-app/src/app/homepage/homepage.component.html
+++ b/volunteer-app/src/app/homepage/homepage.component.html
@@ -3,7 +3,8 @@
 <nav><a routerLink="/event-registration">Register to Volunteer for an Event</a></nav>
 <nav><a routerLink="/volunteer-unregister-event">Unregister Volunteer from event</a></nav> -->
 <app-create-event>
-  </app-create-event>
+</app-create-event>
 
 <app-event-registration></app-event-registration>
 <app-volunteer-unregister-event></app-volunteer-unregister-event>
+<app-update-user></app-update-user>
