--- a/volunteer-app/src/app/create-organizer/create-organizer.component.html
+++ b/volunteer-app/src/app/create-organizer/create-organizer.component.html
@@ -22,7 +22,7 @@
         <input id="phoneNumber" name="phoneNumber" type="tel" formControlName="phoneNumber">
     </p>
     <p>
-        <label>dob:</label>
+        <label>Date of Birth:</label>
         <input id="dob" name="dob" type="date" formControlName="dob">
     </p>
     <p>
