Navigation and logout
-created navigation bar
-new form UI and webpage ui
- hidden/visible navigation depending on if logged in/out

--- a/volunteer-app/src/app/add-event-tasks/add-event-tasks.component.html
+++ b/volunteer-app/src/app/add-event-tasks/add-event-tasks.component.html
@@ -1,6 +1,6 @@
 <h2>Add Event tasks</h2>
 
-<form [formGroup]="registerForm" (ngSubmit)="addTask()">
+<form [formGroup]="registerForm" (ngSubmit)="addTask()" class="form-container">
     <div>
         <select id='eventtask-id' formControlName="eventtask" style="padding:3px; margin:5px; min-width:10%">
             <option [ngValue]="null" disabled>Select Event</option>
