--- a/volunteer-app/src/app/app.component.html
+++ b/volunteer-app/src/app/app.component.html
@@ -7,12 +7,28 @@
 
 
 <app-add-event-tasks></app-add-event-tasks> -->
+<h2>Team JellyFish Volunteering App</h2>
 
+<div class="topnav">
+    <a href="/login" id="login" [ngClass]="{'active' : router.url == '/login',
+     'hidden' : router.url !== '/login' && router.url !== '/signup-volunteer' && router.url !== '/signup-organiser' && router.url !== '/'}">Login </a>
+    <a href="/signup-volunteer" [ngClass]="{'active' : router.url == '/signup-volunteer',
+    'hidden' : router.url !== '/login' && router.url !== '/signup-volunteer' && router.url !== '/signup-organiser' && router.url !== '/'}">Create New Volunteer Account</a>
+    <a href="/signup-organiser" [ngClass]="{'active' : router.url == '/signup-organiser',
+    'hidden' : router.url !== '/login' && router.url !== '/signup-volunteer' && router.url !== '/signup-organiser' && router.url !== '/'}">Create New Organizer Account</a>
+   
+    <a href="/homepage" [ngClass]="{'active' : router.url.includes('/homepage'),
+    'hidden' : router.url == '/login' || router.url == '/signup-volunteer' || router.url == '/signup-organiser' || router.url == '/'}">Home</a>
+    <a href="/update-user" [ngClass]="{'active' : router.url == '/update-user',
+    'hidden' : router.url == '/login' || router.url == '/signup-volunteer' || router.url == '/signup-organiser' || router.url == '/'}">Update Profile</a>
+    <a href="/create-event" [ngClass]="{'active' : router.url == '/create-event',
+    'hidden' : router.url == '/login' || router.url == '/signup-volunteer' || router.url == '/signup-organiser' || router.url == '/'}">Create New Event</a>
+    <a href="/event-registration" [ngClass]="{'active' : router.url == '/event-registration',
+    'hidden' : router.url == '/login' || router.url == '/signup-volunteer' || router.url == '/signup-organiser' || router.url == '/'}">Register for Event</a>
+    <a href="/volunteer-unregister-event" [ngClass]="{'active' : router.url == '/volunteer-unregister-event',
+    'hidden' : router.url == '/login' || router.url == '/signup-volunteer' || router.url == '/signup-organiser' || router.url == '/'}">Unregister from Event</a>
+    <a href="login" style="float:right;" [ngClass]="{'active' : router.url == '/volunteer-unregister-event',
+    'hidden' : router.url == '/login' || router.url == '/signup-volunteer' || router.url == '/signup-organiser' || router.url == '/'}">Log Out</a>
+</div>
 
-
-<br>
-
-<nav><a routerLink="/login">Login</a></nav>
-<nav><a routerLink="/signup-volunteer">Create New Account (Volunteer)</a></nav>
-<nav><a routerLink="/signup-organiser">Create New Account (Organiser)</a></nav>
 <router-outlet></router-outlet>
