--- a/volunteer-app/src/app/create-organizer/create-organizer.component.html
+++ b/volunteer-app/src/app/create-organizer/create-organizer.component.html
@@ -1,5 +1,5 @@
 <h2>Create New Organizer Account</h2>
-<form [formGroup]="form" (ngSubmit)="createOrganizerAccount()">
+<form [formGroup]="form" (ngSubmit)="createOrganizerAccount()" class="form-container">
     <h2>Organizer Signup</h2>
     <p>
         <label>First Name:</label>
