--- a/volunteer-app/src/app/create-volunteer/create-volunteer.component.html
+++ b/volunteer-app/src/app/create-volunteer/create-volunteer.component.html
@@ -1,6 +1,5 @@
 <h2>Create New Volunteer Account</h2>
-<form [formGroup]="form" (ngSubmit)="createVolunteerAccount()">
-
+<form [formGroup]="form" (ngSubmit)="createVolunteerAccount()" class="form-container">
     <h2>Volunteer Signup</h2>
         <p>
             <label>First Name:</label>
