--- a/volunteer-app/src/app/create-event/create-event.component.html
+++ b/volunteer-app/src/app/create-event/create-event.component.html
@@ -2,9 +2,8 @@
   <div class="row">
     <div class="col-md-6">
       <h2>Create New Event</h2>
-      <h4>Reactive Form for Create Event</h4>
-
-      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="form-container">
+        <h2>Create New Event</h2>
         <div class="form-group">
           <label>Event Name</label>
           <input type="text" class="form-control" formControlName="name"
