--- a/volunteer-app/src/app/login/login.component.html
+++ b/volunteer-app/src/app/login/login.component.html
@@ -1,8 +1,10 @@
+
 <h2>Login </h2>
 
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-container">
 
   <div class="form-group">
+    <h2>Login</h2>
     <label for="email">Email Address</label>
     <input type="text" class='form-control' formControlName="email" id="emailLogin"
       [ngClass]="{'is-invalid': submitted && f.email.errors}" />
