--- a/volunteer-app/src/app/update-user/update-user.component.html
+++ b/volunteer-app/src/app/update-user/update-user.component.html
@@ -1,6 +1,7 @@
-<h2>Update user Information</h2>
+<h2>Update User Information</h2>
 <h3>Type in new changes</h3>
-<form [formGroup]="updateUserForm">
+<form [formGroup]="updateUserForm" class="form-container">
+    <h2>Update Profile</h2>
     <!-- Email -->
     <div class="form-group">
         <label for="updateEmail">Email Address</label>
