--- a/volunteer-app/src/app/volunteer-unregister-event/volunteer-unregister-event.component.html
+++ b/volunteer-app/src/app/volunteer-unregister-event/volunteer-unregister-event.component.html
@@ -1,6 +1,7 @@
-<h3>Unregister to Volunteer at an Event</h3>
+<h2>Unregister to Volunteer at an Event</h2>
 
-<form [formGroup]="unregisterForm" (ngSubmit)="submit()">
+<form [formGroup]="unregisterForm" (ngSubmit)="submit()" class="form-container">
+  <h3>Unregister from Event</h3>
   <div>
       <select id='unreg-event-id' formControlName="event" style="padding:3px; margin:5px; min-width:10%">
           <option [ngValue]="null" disabled>Select Event</option>
@@ -13,7 +14,3 @@
   <div id="message" *ngIf="submitted && !success" style="font-size:smaller;color:red">{{message}}</div>
   <div id="success-message" *ngIf="submitted && success" style="font-size:smaller;color:green">{{message}}</div>
 </form>
-
-<nav>
-    <a routerLink="">Return to homepage</a>
-</nav>
